[gd_scene load_steps=4 format=3 uid="uid://brxmao4vb7lx2"]

[ext_resource type="Texture2D" uid="uid://dxews7elm4pd7" path="res://Assets/HealthBarBackground.png" id="1_n2k0l"]
[ext_resource type="Script" uid="uid://b0p11wbjlfb6p" path="res://Levels/UI/hud.gd" id="1_nawfr"]
[ext_resource type="Texture2D" uid="uid://dpdxos0ff78hl" path="res://Assets/HealthBarProgress.png" id="2_nawfr"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nawfr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftColumn" type="HBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 720)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftColumn"]
custom_minimum_size = Vector2(200, 720)
layout_mode = 2

[node name="Score" type="RichTextLabel" parent="HBoxContainer/LeftColumn/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Lalalalala"

[node name="KillCounter" type="RichTextLabel" parent="HBoxContainer/LeftColumn/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 0
text = "100"

[node name="HealthBar" type="TextureProgressBar" parent="HBoxContainer/LeftColumn/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 20.0
nine_patch_stretch = true
texture_under = ExtResource("1_n2k0l")
texture_progress = ExtResource("2_nawfr")

[node name="RightColumn" type="HBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 720)
layout_mode = 2
size_flags_horizontal = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightColumn"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="LevelTimer" type="RichTextLabel" parent="HBoxContainer/RightColumn/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
text = "180
"

[node name="DashCooldown" type="TextureProgressBar" parent="HBoxContainer/RightColumn/VBoxContainer"]
texture_filter = 3
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
fill_mode = 1
nine_patch_stretch = true
texture_under = ExtResource("1_n2k0l")
texture_progress = ExtResource("2_nawfr")
tint_progress = Color(0, 0.458824, 1, 1)
